--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -54,8 +54,14 @@
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
+    <div data-key="17" class="key control-key">
+        <kbd>Press Ctrl key</kbd>
+        <span class="sound">tink</span>
+    </div>
+   
 
   </div>
+
 
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
@@ -65,31 +71,78 @@
   <audio data-key="71" src="sounds/boom.wav"></audio>
   <audio data-key="72" src="sounds/ride.wav"></audio>
   <audio data-key="74" src="sounds/snare.wav"></audio>
-  <audio data-key="75" src="sounds/tom.wav"></audio>
+  <audio data-key="75" id="id-sound" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
+ 
+  <span data-key="17">  </span>
 
 
 
 
 
 <script>
+  //PLAYSOUND NUMBER 1 LETRA D BOOM
+function playSound(){
+ const audio = document.querySelector(`audio[data-key = "${68}"]`);
+ const key = document.querySelector(`.key[data-key = "${68}"]`)
+ audio.play();
+ audio.currentTime=0;
+ key.classList.add('playing');
+ 
+}
 
-window.addEventListener('keydown',function(e){
+//PLAYSOUND NUMBER 2 LETRA S 
+function playSound1(){
+  const key = document.querySelector(`.key[data-key = "${83}"]`)
+  const audio1 = document.querySelector(`audio[data-key = "${83}"]`);
+  audio1.play();
+  audio.currentTime = 0; 
+  key.classList.add('playing');
+}
+
+
+//PAUSA SOUND
+function pausaSound(){
+  clearInterval(interval);
+}
+document.addEventListener('keydown', function(e){
+
+ const keyName = e.key;        
+        if (keyName === "Control") {
+         console.log(`The key pressed is ${keyName}`);
+         
+        var timeoutID = window.setInterval(playSound, 3500);
+        var time1 =window.setInterval(playSound,3000);
+        var time2 =window.setInterval(playSound,2000);
+        var time3 =window.setInterval(playSound,2500);
+        var interval = window.setInterval (playSound, 1000); 
+       
+        }
+  
   const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
   const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
   if(!audio)return; //stop the function for running all toguether
   audio.currentTime = 0; //rewind to the start
   audio.play();
   key.classList.add('playing');
-});
+ 
+ });
+
+
+
+
+
 
 function removeTransition(e){
-if(e.propertyName !== 'transform') return; //skip it if is not a transform
-console.log(this);
-this.classList.remove('playing');
+   if(e.propertyName !== 'transform') return; //skip it if is not a transform
+   this.classList.remove('playing');
 }
 const keys = document.querySelectorAll('.key');
+
 keys.forEach(key =>key.addEventListener('transitionend', removeTransition));
+
+
+
 </script>
 
 
